css fixes tag overflowing view

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ li {
 }
 
 .tag-link {
-  margin: 0 0.25rem;
+  margin: 0.125rem 0.25rem;
   padding: 0 0.25rem;
   border-radius: 4px;
   background-color: rgb(216, 216, 216);
